Update BI 1 unti 3 slides

--- a/Bayesian_inference_1/3.1-Modular_models.qmd
+++ b/Bayesian_inference_1/3.1-Modular_models.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Modular modules"
+title: "Modular models"
 subtitle: "Types of response and predictor variables"
 author:
   - Elizabeth King
