--- a/Bayesian_inference_1/3.4-Drawing_conclusions.qmd
+++ b/Bayesian_inference_1/3.4-Drawing_conclusions.qmd
@@ -187,7 +187,7 @@ Approaches
 More in Week 5
 
 
-## HDPI bands
+## HPDI bands
 
 Predict across a range of `log10SVL` for each level of `ForagingMode`.
 
