--- a/Bayesian_inference_1/Bayes.bib
+++ b/Bayesian_inference_1/Bayes.bib
@@ -2214,6 +2214,38 @@
   original_id = "51164b0f-7ced-081b-b3fd-bce8e49b8436"
 }
 
+@ARTICLE{Vehtari2015-kl,
+  title         = "Pareto Smoothed Importance Sampling",
+  author        = "Vehtari, Aki and Simpson, Daniel and Gelman, Andrew and Yao,
+                   Yuling and Gabry, Jonah",
+  abstract      = "Importance weighting is a general way to adjust Monte Carlo
+                   integration to account for draws from the wrong
+                   distribution, but the resulting estimate can be highly
+                   variable when the importance ratios have a heavy right tail.
+                   This routinely occurs when there are aspects of the target
+                   distribution that are not well captured by the approximating
+                   distribution, in which case more stable estimates can be
+                   obtained by modifying extreme importance ratios. We present
+                   a new method for stabilizing importance weights using a
+                   generalized Pareto distribution fit to the upper tail of the
+                   distribution of the simulated importance ratios. The method,
+                   which empirically performs better than existing methods for
+                   stabilizing importance sampling estimates, includes
+                   stabilized effective sample size estimates, Monte Carlo
+                   error estimates, and convergence diagnostics. The presented
+                   Pareto $\hat\{k\}$ finite sample convergence rate diagnostic
+                   is useful for any Monte Carlo estimator.",
+  month         =  jul,
+  year          =  2015,
+  url           = "http://arxiv.org/abs/1507.02646",
+  keywords      = "xx Archived/AJPA Reply;Module - Bayes",
+  archivePrefix = "arXiv",
+  eprint        = "1507.02646",
+  primaryClass  = "stat.CO",
+  arxivid       = "1507.02646",
+  original_id   = "05703a6d-8214-02bb-81ea-39250c5437bc"
+}
+
 @ARTICLE{Arsnoe2015-hj,
   title       = "Different populations of blacklegged tick nymphs exhibit
                  differences in questing behavior that have implications for
@@ -2692,6 +2724,38 @@
   keywords = "Bayes Readings;Module - Bayes",
   issn     = "0943-4062",
   doi      = "10.1007/s00180-020-01045-4"
+}
+
+@ARTICLE{Vehtari2012-jk,
+  title     = "A survey of Bayesian predictive methods for model assessment,
+               selection and comparison",
+  author    = "Vehtari, Aki and Ojanen, Janne",
+  abstract  = "To date, several methods exist in the statistical literature for
+               model assessment, which purport themselves specifically as
+               Bayesian predictive methods. The decision theoretic assumptions
+               on which these methods are based are not always clearly stated
+               in the original articles, however. The aim of this survey is to
+               provide a unified review of Bayesian predictive model assessment
+               and selection methods, and of methods closely related to them.
+               We review the various assumptions that are made in this context
+               and discuss the connections between different approaches, with
+               an emphasis on how each method approximates the expected utility
+               of using a Bayesian model for the purpose of predicting future
+               data.",
+  journal   = "Statistics Surveys",
+  publisher = "Amer. Statist. Assoc., the Bernoulli Soc., the Inst. Math.
+               Statist., and the Statist. Soc. Canada",
+  volume    =  6,
+  number    = "none",
+  pages     = "142--228",
+  month     =  jan,
+  year      =  2012,
+  url       = "http://dx.doi.org/10.1214/12-SS102",
+  keywords  = "62-02; 62C10; Bayesian; cross-validation; decision theory;
+               Expected utility; information criteria; model assessment; Model
+               selection; predictive; ;Module - Bayes",
+  issn      = "1935-7516",
+  doi       = "10.1214/12-SS102"
 }
 
 @ARTICLE{Gabry2019-tw,
