--- a/Bayesian_inference_1/2.2-Prior_predictive_simulation.qmd
+++ b/Bayesian_inference_1/2.2-Prior_predictive_simulation.qmd
@@ -7,7 +7,7 @@ format:
   revealjs:
     theme: [default, custom.scss]
     standalone: true
-    self-contained: true
+    embed-resources: true
     logo: QMLS_Logo.png
     slide-number: true
     show-slide-number: all
