--- a/Bayesian_inference_1/5.2-WAIC.qmd
+++ b/Bayesian_inference_1/5.2-WAIC.qmd
@@ -34,6 +34,9 @@ library(cmdstanr)
 library(brms)
 library(bayesplot)
 color_scheme_set(scheme = "red")
+
+options(brms.backend = "cmdstanr",
+        mc.cores = 4)
 ```
 
 - Likelihood ratio tests
